--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.17</version>
 		</dependency>
+		<dependency>
+           		<groupId>commons-httpclient</groupId>
+            		<artifactId>commons-httpclient</artifactId>
+            		<version>3.1</version>
+        	</dependency>
 	</dependencies>
 
 </project>
